
message LatestBlockRequest {
    required bytes LatestID = 1;
}