
message LatestBlockResponse {
    repeated SkipBlock Update = 1;
}