
message SignatureRequest {
    required bytes message = 1;
    required Roster roster = 2;
}
