
message SignatureResponse {
    required bytes hash = 1;
    required bytes signature = 2;
}
