
message StoreSkipBlockRequest {
    required bytes LatestID = 1;
    required SkipBlock NewBlock = 2;
}